--- a/source/404.html
+++ b/source/404.html
@@ -27,5 +27,6 @@
 	</script>
 </head>
 <body>
+<script data-ad-client="ca-pub-4066516091601351" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 </html>
