--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ $$('.fbPhotosPhotoCaption')[0].addEventListener('DOMSubtreeModified', handler);
 </span>
 
 
-  <div class="entry entry-content"><p><img src="http://i.imgur.com/Gq3Gp.png"></p>
+  <div class="entry entry-content"><p><img src="https://i.imgur.com/Gq3Gp.png"></p>
 
 <p>This post is an information/note aggregation from all the events that I have joined in 2012.</p>
 
